Added MiddleWare API Layer and integrated Login & Signup functionality